[package]
name = "token-api"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
dotenv = "0"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
lazy_static = "1"
solana-client = "2.2"
solana-sdk = "2.2"
spl-token = { version = "7.0", features = ["no-entrypoint"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.5"
